[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/lock-spy.png" type="Texture" id=1]
[ext_resource path="res://gui/ScreenWipe.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/AtkinsonHyperlegible-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/PlayerAssignments.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 3 )

[node name="PlayerAssignments" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 448.0
texture = ExtResource( 1 )
expand = true

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 512.0
margin_bottom = -256.0
custom_styles/panel = SubResource( 1 )
tabs_visible = false

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -96.0
margin_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "Continue"

[node name="Wipe" parent="." instance=ExtResource( 2 )]
visible = false
duration = 0.3

[connection signal="pressed" from="Button" to="." method="_next_player"]
[connection signal="wipe_finished" from="Wipe" to="." method="_wipe_finish"]
[connection signal="wipe_midpoint" from="Wipe" to="." method="_wipe_midpoint"]
